Image link fix (minor)

--- a/_posts/2014-10-06-rss-enabled.textile
+++ b/_posts/2014-10-06-rss-enabled.textile
@@ -22,7 +22,7 @@ I have only two that I've found in the last 21 years for "Steffey".
 
 The Steffey nose:
 
-!http://i.imgur.com/WHWI4Ev.png(RIP: Here lies Mort, who died from the hilarity of a better name-pun than even this very gravestone can provide)!
+!http://i.imgur.com/h6wkqYx.png(RIP: Here lies Mort, who died from the hilarity of a better name-pun than even this very gravestone can provide)!
 
 And naming the occasional vessel with my initials
 
