--- a/_posts/2014-12-16-imaginations-more-like-imagishmations-amiright.textile
+++ b/_posts/2014-12-16-imaginations-more-like-imagishmations-amiright.textile
@@ -18,10 +18,10 @@ I am in the very odd situation in that I have spent the last two months writing 
 
 So, in the traditional spirit of AP and Honors students everywhere- I am posting each with the date well before their completion.
 
-Those of you following the RSS feed may receive conflicting updates in the next few days as I release these posts into the wild.
+Those of you following the RSS feed may receive conflicting updates in the next few days as I release these stories into the wild.
 Those of you stumbling upon this site and reading through archived posts-  please disregard.  All dates indicated here are true and actual times that the posts were submitted.
 
-Let's begin this avalanche of posts with one that actually took place today:
+Let's begin this avalanche of updates with one that actually took place today:
 
 <br/>
 
@@ -87,17 +87,11 @@ In my mix of confusion/sad/mad/upset/frankly-quite-amused-at-the-level-of-incomp
 
 <br/>
 <br/>
-<br/>
 
 In the 30 minutes of drawing that, I unknowingly received another email.
 
 This one simply apologized for the previous correction email, instructed me to disregard whatever it may have said, and await further notification.
 
-
-<br/>
-<br/>
-<br/>
-<br/>
 <br/>
 <br/>
 <br/>
