--- a/_posts/2014-11-11-my-fridge-is-self-aware.textile
+++ b/_posts/2014-11-11-my-fridge-is-self-aware.textile
@@ -3,14 +3,14 @@ layout: post
 title: Sentient Fridge
 tags: programming project
 comments: true
-published: false
+published: true
 ---
 
 Programming knowledge is a wondrous thing.
 
 I can make a pile of wires and silicon read my commands, translate them to a series of 1's and 0's, and then perform any action I desire (assuming I also have the hardware to support it).
 
-It's a bit like being a wizard really.  Only rather than barely obscured latin roots combined in various ways, I just type a bunch of repetitive terms in the right pattern until something happens (also occasionally grabbing chunks of these patterns from other spells I can find on the internet).
+It's a bit like being a wizard really.  Only rather than barely obscured latin linguistic roots combined in various ways, I just type a bunch of repetitive terms in the right pattern until something happens (also occasionally grabbing chunks of these patterns from other spells I can find on the internet).
 
 I have the technical ability to write programs capable of absolutely ground-breaking things.  We live in era so massively interconnected, that through a little bit of code and combining the right frameworks, anything is possible.
 As such, I spent the weekend making my fridge tweet things.
@@ -23,24 +23,163 @@ The plan: A webcam, some magnetic letters, and a Python OCR library.
 
 I went to Walmart, bought a pack of alphabet fridge magnets, and set up my whiteboard.
 
-The script only took a couple of hours to get down.  Most of the time was spent getting used to using OpenCV and understanding just how in the heck to use Twitter authorization tokens (Fun fact: I am still only 80% sure I could explain it to someone).
+The script only took a couple of hours to get down.  Most of the time was spent getting used to using OpenCV and understanding just how in the heck to use Twitter authorization tokens (Fun fact: I am still only 80% sure I could explain the Twitter API to someone).
 
+The code for the Tweeting process is incredibly straightforward (The example below will tweet whatever string "toTweet" contains.)  [Using the Twython library]
 
-
-
+<pre>
 <code>
-imgray = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)
-blur = cv2.GaussianBlur(imgray,(15,15),0)
-thresh = cv2.adaptiveThreshold(blur,255,cv2.ADAPTIVE_THRESH_MEAN_C, cv2.THRESH_BINARY, 11, 2)
+APP_KEY = REDACTED  
+APP_SECRET = REDACTED  
+OAUTH_TOKEN = 'JustPictureThisAsARandomJumbleOfLettersRoughlyThisLong'
+OAUTH_TOKEN_SECRET = 'AnotherRandomJumbleOfRoughlyTheSameLength'
+
+#Create Twitter object
+twitter = Twython(APP_KEY, APP_SECRET, OAUTH_TOKEN, OAUTH_TOKEN_SECRET)
+#Send it on
+twitter.update_status(status=toTweet)
 </code>
+</pre>
 
+What I still don't have a handle on is how to correctly and securely get those first four variables.
+For the purposes of this experiment (Throwaway Twitter account and one-person app), I manually grabbed the tokens and secrets from the Twitter Developer stats pages for my registered app and hardcoded them into the script.
+Twitter specifically says to not do this.  My hopes are that they really mean "Yeah... don't let other people find these numbers out", which I'm pretty sure applies to anything labelled "Secret" in a daily life context as well.  Regardless, as a certified rebel, I felt it was in the best interests of this project to ignore all advice and clunkily get the project up and running.
 
+Despite just now writing about it first, the Tweet functionality was actually the last stage of the project.  After awkwardly propping up a testing board between my trash-can and dresser, and getting my webcam appropriately angled, the work came down to taking an image, and creating a classifier to read the images taken by my webcam.  One of these things ended up being far more difficult than the other (And it isn't the one you'd probably expect).
 
-As it turns out, 640x480 resolution from across the kitchen with yellow letters in yellowish lighting is rough.
+My only past experiences with machine learning had been with Neural Networks (Restricted Boltzman machines for my 2013 summer, and a standard feed-forward net during an AI(Artifical) class last year).
+Since I was just doing simple contour classification on 26 possible classes, I decided to use a K-nearest neighbors classifier.  I'm not going to explain it here, mainly because there are far better <a href="http://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm" target="_blank">examples</a> already available
+
+OpenCV makes this an incredibly complicated process.
+
+<pre>
+<code>
+model = cv2.KNearest()
+</code>
+</pre>
+
+And then there's the laborious page after page of code to input the sample data and train the classifier...
+
+<pre>
+<code>
+samples = np.loadtxt('generalsamples.data',np.float32)
+responses = np.loadtxt('generalresponses.data',np.float32)
+responses = responses.reshape((responses.size,1))
+
+model.train(samples,responses)
+</code>
+</pre>
+
+Oh.  Well that went much easier than expected..  Let's see how we did.
+
+!http://i.imgur.com/7BJdJW4.png(I mean it....recognized three separate letters?...I guess that's good)!
+
+Oh yeah.  We probably need to tweak some image settings!
+I will spare you the details, just because they are truly a result of random tinkering.  I can only back up a few of my choices, and all else was purely brute force trial and error.
+
+<pre>
+<code>
+crop = camera_capture[125:(125+height), 200:(200+width)]
+colorblur = cv2.GaussianBlur(crop,(5,5),0)
+
+</code>
+</pre>
+
+Okay, well so far, that's straightforward.
+
+- Crop to the relevant parts (the board area)
+- Blur
+
+And now we'll go through the small ranges of each possible color, to isolate only the letter parts of the image:
+
+<pre>
+<code>
+boundaries = [
+		([25, 100, 30], [43, 255, 255]), #yellow
+		([50, 135, 50], [96, 255, 255]), #green
+		([100, 180, 50], [125, 255, 255]), #blue
+		([150, 180, 50], [180, 255, 255]), #Top reds
+		([0, 180, 50], [15, 255, 255]) #Bottom reds
+	]
+
+mask = np.zeros((height,width,1), np.uint8)
+count=0
+# loop over the color boundaries
+for (lower, upper) in boundaries:
+	# create NumPy arrays from the boundaries
+	lower = np.array(lower, dtype = "uint8")
+	upper = np.array(upper, dtype = "uint8")
+ 
+	#Add these color pixels to mask
+	r1 = cv2.inRange(img_hsv, lower, upper)
+	mask = cv2.add(r1,mask)
+</code>
+</pre>
+
+And then take that mask and find the contours!
+
+<pre>
+<code>
+output = cv2.bitwise_and(colorblur, colorblur, mask = mask)
+contours, hierarchy = cv2.findContours(backtogray,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)
+</code>
+</pre>
+
+Now here's where things got tricky.
+We have the contours, but we have to classify them.
+My first iteration disregarded letter color entirely.  I (naively) assumed that a static camera angle and distinct set of only 26 uniform characters would make detection pretty straightforward.
+All classifications were done from the same contour sets
+However, after moving my rig to the kitchen and integrating onto the fridge, my opinion shifted.
+As it turns out, deciphering a 640x480 resolution image from across the kitchen with tiny yellow letters in yellowish lighting on a slightly dirty yellowish fridge is tougher than first guess.
 
 !http://i.imgur.com/Vfk0ygB.png(I do not endorse the use of heavy appliances as self-aware entities)!
 
+So, I redesigned the contour classifications to be hue specific.
 
-Regardless:  the revolution hasn't happened yet, so for now I feel safe.
+Not wanting to uproot my entire process, I sacrificed some processing speed for ease of implementation (The webcam was only taking an image every minute, so the efficiency loss [within reason] doesn't affect the program)
+I read the initial contours as normal, and just changed my classifications after the fact to try and line up with associated letter colors
+
+<pre>
+<code>
+if avg[0] >= 45 and avg[0] < 95: #greens
+	if chr(results[0][0]) in 'cgnrx':
+		string = chr(results[0][0])
+	else:
+		for letter in neighbors[0]:
+			if chr(int(letter)) in 'cgnrx':
+				string = chr(int(letter))
+				break;
+</code>
+</pre>
+
+C, G, N, R, and X are the green letters in the magnet set we have, so my classifications are now narrowed to that range.  If I fail to classify as one of those options, the classifier attempts the next closest result in the 'neighbors' list (created by the initial classification attempt)
+This conditional is repeated for each of the colors within my magnets.
+
+This change improved my output so drastically that I could hardly believe it:
+
+!http://i.imgur.com/QCiTlkq.png(The amount of joy in pure unadulterated squealing that I emitted when my computer outputted "CAT" was probably more than I should admit to)!
+
+
+I ran the script on my laptop for a week, and the results (with varying success rates) can be seen here: <a href="https://twitter.com/ApartmentFridge" target="_blank">@ApartmentFridge on Twitter</a>
+
+Many tweaks were made in this week.  Primarily adding a threshold for gibberish, as well as detection for when the lights were turned out at night.
+
+Unfortunately, the largest obstacle in this entire project was one that I never would have predicted.
+
+Logitech.
+
+My intention was to leave this script running permanently on the server in our kitchen.
+This was a foolish plan.  Neither of the two webcams at my disposal have supported drivers on the Windows Server platform.  Logitech released a statement announcing their lack of intention to support Windows Server 2003. (I attempted to relocate this article for this post, but this <a href="http://forums.logitech.com/t5/Webcams/Which-Logitech-Webcam-runs-an-Windows-Server-2003/td-p/320761" target="_blank">unofficial response</a>) is the best I can do.
+Regardless, after a solid week of getting absolutely no where, I am ashamed to say that the machines won.  I quit my attempts and returned to my regularly scheduled school assignments.
+
+Some may call this quitting.
+And I would be one of those people.
+
+But who knows?  I may have just helped stave off the machine revolution for a tiny bit longer...
 
 !http://i.imgur.com/a2Qtjek.png(I do not endorse the use of heavy appliances as self-aware entities)!
+
+%{font-size:9pt}*For the sake of brevity, I neglected to mention that I also wrote a training program to provide the classifier's initial data associations.  Basically the trainer script takes the image, performs the image manipulations that I outlined above to get the contour objects, and then walks me through shape by shape, letting me enter the correct character. (Supervised learning)%
+
+%{font-size:9pt}**I plan on putting the full script for both training and recognition on Github. I just have to be sure all the authorization tokens have been scrubbed. This code is incredibly useless for anyone not using my apartment kitchen, since most is just hardcoded values tuned to the environment and camera angle, but it could be fun to look at I suppose.%
+
