--- a/_posts/2014-11-21-i-still-have-a-dog.textile
+++ b/_posts/2014-11-21-i-still-have-a-dog.textile
@@ -8,7 +8,7 @@ published: false
 
 I'm afraid I made a mistake in a prior post.  I wrote an entire page about adopting Echo, but I kept referring to him as a dog.
 
-It has been brought to my attention since this posting, that Echo is -in fact- a rare form of mountain goat.
+It has been brought to my attention since this posting, that Echo is - in fact - a rare form of mountain goat.
 
 This revelation shouldn't have come as a surprise, as the warning signs have been steadily progressing as he's grown comfortable in my house..
 
@@ -23,9 +23,7 @@ This revelation shouldn't have come as a surprise, as the warning signs have bee
 
 
 
-We've been told he may also be at least a tiny bit Gazelle, which makes sense:
-
-
+We've been told he may also be at least a tiny bit Gazelle, which makes sense given his propensity to leap over literally anything between him and his ball.
 
 And he is 100% wallowing puddle of purposeful ignorance and subsequent guilt:
 
@@ -52,7 +50,7 @@ And he is 100% wallowing puddle of purposeful ignorance and subsequent guilt:
 <br/>
   
   
-But in the end,  he's still my new best friend.
+But in the end,  he's still the best.
 Goofy he may be, but I keep pausing while typing this post just to look over at him sleeping soundly in his camp chair in the corner of my room.
 
 I can't help but be appreciative of the happiness he brings me.
@@ -62,7 +60,6 @@ The amount of loyalty and support he brings.
 The way his tai-  
 ...hold that thought.
 
-  ECHO, GET DOWN HERE *RIGHT. NOW.*
   
   <br/>
   <br/>
