--- a/_posts/2015-01-21-semester-projects.textile
+++ b/_posts/2015-01-21-semester-projects.textile
@@ -6,7 +6,7 @@ comments: true
 published: true
 ---
 
-If you've never read any of the masterpiece that is <a href="http://hyperboleandahalf.blogspot.com/" target="_blank">Hyperbole and a Half</a>, then I'm afraid you just sealed the next two hours of your time by clicking that link.  Both her blog and XKCD are massive influences on the way I tend to write and present things in this one.
+If you've never read any of the masterpiece that is <a href="http://hyperboleandahalf.blogspot.com/" target="_blank">Hyperbole and a Half</a>, then I'm afraid you just sealed the next two hours of your time by clicking that link.  Both her blog and <a href="https://what-if.xkcd.com/" target="_blank">XKCD</a> are massive influences on the way I tend to write and present things here.
 
 I always wondered how on earth it could take Allie months (occasionally over a year) to post an update.  The combination of short personal stories and MS Paint seemed like it surely couldn't take more than a week or so to write.
 
@@ -27,7 +27,7 @@ Allie releases posts to literally millions of people.  I write for six on a grea
 
 And yet, that crippling doubt over the most insignificant of things is still an enormous factor.  In several ways, I think it's healthy and good for my work.  I am committed to only putting out quality work.  I don't like releasing anything attached to my name that isn't perfect.
 
-But the much larger implications of that mean that I rarely display my work.  I've scrapped many personal projects after days or weeks of effort, only for no results to ever see the light of day.  One of my favorite animations I've ever worked on was made over many weeks for my campus job- and in the end I trashed the entire thing because it didn't seem to be going anywhere.
+But the much larger implications mean that I rarely display my work.  I've scrapped many personal projects after days or weeks of effort, only for no results to ever see the light of day.  One of my favorite animations I've ever worked on was made over many weeks for my campus job- and in the end I trashed the entire thing because it didn't seem to be going anywhere.
 
 I often hear that one of the largest factors in game design and other creative endeavors is being able to cut out the parts that just aren't working.  No matter the amount of time invested into them.  Killing your darlings.
 I feel like I tend to fall on the opposite extreme of this.  I serial kill darlings.
