Echo II post and domain name change
Adding CNAME file to register rssteffey.com

--- a/_posts/2015-02-26-i-still-have-a-dog.textile
+++ b/_posts/2015-02-26-i-still-have-a-dog.textile
@@ -3,7 +3,7 @@ layout: post
 title: Echo II
 tags: dog
 comments: true
-published: false
+published: true
 ---
 
 I'm afraid I made a mistake in a prior post.  I wrote an entire page about adopting Echo, but I kept referring to him as a dog.
@@ -14,7 +14,7 @@ This revelation shouldn't have come as a surprise, as the warning signs have bee
 
 
 
-!http://i.imgur.com/ePZUJUe.png(Oh, hi there Hooman!)!
+!http://i.imgur.com/ePZUJUe.png(Oh, hi there, also-tall-Hooman!)!
 
 !http://i.imgur.com/8zYDvyQ.png(Hooman, look!  I can computer too!)!
 
@@ -24,8 +24,20 @@ This revelation shouldn't have come as a surprise, as the warning signs have bee
 
 
 We've been told he may also be at least a tiny bit Gazelle, which makes sense given his propensity to leap over literally anything between him and his ball.
+An actual summary of his genetics would read like the never-ending ingredients list for an artificial sweetener.
 
-And he is 100% wallowing puddle of purposeful ignorance and subsequent guilt:
+39% Mountain Goat (Climbing)
+27% Gazelle (Leaping)
+12% Anteater  (Tongue Length)
+9%  Vulture (Desire to look down from a perch)
+4%  Gollum (In pooping posture only)
+...
+...
+...
+<.025% Possessed Girl from "The Exorcist" (Sleep-twitching with eyes half open)
+and trace amounts of dog.
+
+But ultimately - he is 100% wallowing puddle of purposeful ignorance and subsequent guilt:
 
 !http://i.imgur.com/xgVhDfr.png(Kennel?)!
 
@@ -39,7 +51,7 @@ And he is 100% wallowing puddle of purposeful ignorance and subsequent guilt:
 <br/>
 <br/>
 
-!http://i.imgur.com/cQEM89q.png(I should poop on the carpet again tomorrow, just to be sure)!
+!http://i.imgur.com/cQEM89q.png(I should poop on the carpet again tomorrow, just to be sure...)!
 
 
  
@@ -47,11 +59,12 @@ And he is 100% wallowing puddle of purposeful ignorance and subsequent guilt:
 <br/>
 <br/>
 <br/>
-<br/>
   
   
 But in the end,  he's still the best.
-Goofy he may be, but I keep pausing while typing this post just to look over at him sleeping soundly in his camp chair in the corner of my room.
+Goofy he may be, but I keep pausing while typing this post just to look over at him sleeping soundly in his bed in the corner of my room.
+
+!http://i.imgur.com/tvrkutq.png(This is sans-demonic twitching)!
 
 I can't help but be appreciative of the happiness he brings me.
 
@@ -61,8 +74,6 @@ The way his tai-
 ...hold that thought.
 
   
-  <br/>
-  <br/>
   <br/>
   <br/>
   <br/>
