--- a/_posts/2015-02-17-leaping-out-on-a-lack-of-tether.textile
+++ b/_posts/2015-02-17-leaping-out-on-a-lack-of-tether.textile
@@ -1,14 +1,72 @@
 ---
 layout: post
-title: Halfway Down
+title: Point 'B'
 tags: humor
 comments: true
 published: false
 ---
 
 I am the parent of my friend group.
-In just about every activity, I am the stick in the mud who hands out water bottles, takes up car keys, and generally tries to keep the group from choosing life-threatening actions. 
+In every activity, I am the stick in the mud who hands out water bottles, takes up car keys, and generally tries to keep the group from choosing life-threatening actions. The following sentence therefore might seem strangely out of character for me: I have cliff jumped for years.
 
-So 
+Somehow this slipped through my caution-filter. I don't mean Acapulco-style, huevos-of-steel CLIFF JUMPING-  But smaller, normal person cliffs:  20, 30 feet tall.  I think I was desensitized to the concept back in 6th grade during lake days with the youth group, jumping off old silos into the water below. Tiny adrenaline spikes suitable for my scrawny prepubescent body. These became the gateway plunges.
 
-I have cliff jumped for years with friends
+My high school years were a whirlwind of further inoculation.  Freshman year I jumped 30 feet into a natural crater on a mission trip to the Bahamas.  A few years later the same into a quarry near home.  Cliffs at the lake, more silos, rope swings.  Plunging at high speed into a body of water lost all danger.  For someone terrified of small spaces, public speaking, and spiders- heights somehow managed to lose any hold over me.
+
+Fear is crucial to human survival.
+A long chain of healthy terror resulted in me standing here today.
+
+
+
+An implied role attributed to my life is to not end that chain.
+
+
+Sometime last fall, I was invited to go with a couple of close friends to jump at a place called Love Colony.  
+
+
+The main cliff at Love Colony is slightly over 50 feet high.
+
+This is roughly 40 mph.
+
+I hit the water with a splap.
+I had to make up that word to convey the sound heard upon me crossing into the lake's surface.  The "spl" was the beginning of a splash, and then the "ap" was the deafening snap from my lower back.
+
+TERROR.
+
+In that moment, I became every horror story my mom had ever told me about idiot kids who jumped off cliffs and were paralyzed for life.  I saw 50 years of being confined to a wheelchair, speaking at school rallies to warn kids about the dangers of being a moron.
+
+Then I surfaced.  Gasping for air, and trying desperately to arch my back into a position not sending shards of pain rippling down my torso, while also maintaining a pretty decent grasp on not drowning.
+
+Within a few moments I realized that I was not -in fact- paralyzed for life.
+I would have laughed in relief, if not for the fact that every intake of air felt like a small narwhal prodding my spine.
+
+I managed to swim back to the rocky shore after assuring the rest of the group I was okay, and then endure the incredibly painful hike and bumpy drive back to campus where my muscle relaxants awaited.
+
+So that would be the story of the scariest moment in my life.
+
+Except that wasn't it.  That was point B.
+
+I tell that entire thing, simply because I have no other way of explaining the absolute sheer terror that coursed through my body only .5 seconds prior to Point B:  at Point A.
+
+Point A, I can only assume occurred at roughly 1.35 seconds into my jump. The largest difference between jumping off a cliff that is 30 feet high versus one that is 55 feet high is less impact speed, and more the length of the freefall. A 30ft cliff jump lasts approximately 1.35 seconds for a 180 pound male like myself. My jump from Love Colony was 1.86 seconds.
+
+At 1.4 seconds into my freefall, my brain decided it might be a good time to contemplate on a few things.  Most notably, "Why have we not hit the water yet?".
+After a brief moment of introspection, it decided it should probably check with someone else to ensure things were okay.
+Inner-Ear returned a positive check.  Yes, we were still falling.  Quite rapidly.
+My brain mulled over this information for a few milliseconds, concerned that something still seemed off, and decided to confirm with Sight that things were still going as planned.
+Sight calculated approximately a standard cliff's worth of distance below us still remaining, and sent that information back to HQ.
+
+I cannot explain in any amount of words how much pure fear I experienced in that moment.
+
+
+I've thrown out my back four or five times in my life, and impacting into the water slightly off-center at 40mph is officially my least favorite to do it.
+
+1.86 seconds
+
+
+Nothing on earth will ever compare to the raw terror of point A.  I tried writing this post back when it actually occurred- but I couldn't bring myself to even briefly recollect the moment in order to spit out words.
+It is thoroughly illogical, baseless, and really should not even compare to a point of assumed paralysis.
+
+All I know is that when I reminisce on point B, it's with laughter and a mixture of awe and thankfulness that I wasn't killed. But even a flicker of recognition of point A literally makes me weak in my stomach.
+
+*This post has been difficult to write, simply because I can't focus on Point A for more than a few seconds without feeling absolutely sick.  As it turns out, being unable to focus on a subject makes it incredibly hard to describe aforementioned subject.
