Testing out Twitter preview implementation
Fingers crossed

--- a/_posts/2015-08-31-year-one.textile
+++ b/_posts/2015-08-31-year-one.textile
@@ -4,6 +4,7 @@ title: Surprise!!!
 tags: birthday
 comments: true
 published: true
+description: In which the site is revived with celebratory news after a long absence.
 ---
 
 Happy Birthday!
