--- a/_posts/2014-12-16-imaginations-more-like-imagishmations-amiright.textile
+++ b/_posts/2014-12-16-imaginations-more-like-imagishmations-amiright.textile
@@ -3,6 +3,7 @@ layout: post
 title: Designing an Emotional Rollercoaster
 tags: disney art
 comments: true
+description: In which Mickey Mouse dangles a carrot before yanking the rug out.
 ---
 
 You've probably been thinking to yourself lately:
