--- a/_posts/2015-02-28-on-concept-art-and-epcot.textile
+++ b/_posts/2015-02-28-on-concept-art-and-epcot.textile
@@ -4,6 +4,7 @@ title: Experimental Prototype Search Engine of Tomorrow
 tags: art, EPCOT, Google, obsession
 comments: true
 published: true
+description:  In which Shawn reveals a tad too much of his obsessive side.
 ---
 
 This is going to be a bit of a deviation from the normal posts on here- if only because I am <s>probably</s> a bit too obsessed with concept art, utopian design schemes, and EPCOT(Experimental Prototype Community of Tomorrow) Center.
