--- a/_posts/2015-08-31-year-one.textile
+++ b/_posts/2015-08-31-year-one.textile
@@ -5,6 +5,7 @@ tags: birthday
 comments: true
 published: true
 description: In which the site is revived with celebratory news after a long absence.
+image: cake.png
 ---
 
 Happy Birthday!
