Minor changes to the Fear post
Phrasing

--- a/_posts/2015-10-18-leaping-out-on-a-lack-of-tether.textile
+++ b/_posts/2015-10-18-leaping-out-on-a-lack-of-tether.textile
@@ -43,17 +43,16 @@ TERROR.
 
 In that moment, I became every horror story my mom had ever told me about idiot kids who jumped off cliffs and were paralyzed for life.  I saw 50 years of being confined to a wheelchair, speaking at school rallies to warn kids about the dangers of being a moron.  I could write a book; I could do a tour while confined to my rolling vegetable-mobile.  Life would be different, for sure, but I could make it work.  I would be the poster-child for bad decisions, and for a brief millisecond under the water- everything felt manageable.  
 
-!http://i.imgur.com/OMcDvs7.png(I wonder if I could still program without my arms...)!
+!http://i.imgur.com/OMcDvs7.png(This could work.  I still have Netflix to look forward to.)!
 
-Then I surfaced,  gasping for air and trying desperately to arch my back into a position not sending shards of pain rippling down my torso, while also maintaining a pretty decent grasp on not drowning.  The pain brought tears to my eyes.  I treaded water as I struggled to find a swimming position that didn't feel like I landed directly on an upturned narwhal.  It was not working.
+Then I surfaced,  gasping for air and trying desperately to arch my back into a position not sending shards of pain rippling down my torso, while also maintaining a pretty decent grasp on not drowning.  The pain brought tears to my eyes.  I treaded water as I struggled to find a swimming position that didn't feel like I had just embedded an upturned narwhal into my spine.
 
-As I bobbed there flopping around, it slowly dawned on me that I was not - in fact - paralyzed for life.  The pain shooting throughout my torso was actually a wonderful sign of a functional nervous system. I would have laughed in relief, if not for the fact that every intake of air just angered the narwhal embedded in my spine.
+As I bobbed there wincing through the pain, it slowly dawned on me that I was not - in fact - paralyzed for life.  The pain shooting throughout my torso was actually a wonderful sign of a functional nervous system. I would have laughed in relief, if not for the fact that every intake of air just angered the narwhal.
 
 I managed to swim (flail in a uniform direction) back to land while assuring the rest of the group I was okay, and after crawling back up onto the rocky shoreline like a fish 2000 years over-eager for his evolutionary progression, endured the incredibly painful hike and bumpy drive back to campus where my muscle relaxants awaited.
 
 So that would be the story of the scariest moment in my life.
 
-<br/>
 <br/>
 
 Except that wasn't it.  That was point B.
