Edits to Fear post again
Because I’m self conscious of my writing don’t judge me go away

--- a/_posts/2015-10-18-leaping-out-on-a-lack-of-tether.textile
+++ b/_posts/2015-10-18-leaping-out-on-a-lack-of-tether.textile
@@ -71,8 +71,9 @@ HQ promptly stopped responding and decided to let Fear take over the controls wh
 I cannot explain in any amount of words how much pure terror I experienced in that moment.  The disconnect between where my brain assumed the water should be and where it actually lay 20 feet below short-circuited every bit of logical thought.  
 
 
-Nothing on earth will ever compare to the raw panic overload of point A.  I tried writing this post back when it actually occurred- but I couldn't bring myself to even briefly recollect the moment in order to spit out words.  Even a year later, it is not fun to reminisce on that moment.  Some of my worst nightmares end with me waking up in bed after hitting that moment of freefall.
-It is thoroughly illogical, baseless, and really should not even compare to the following moment of assumed paralysis.  All I know is that when I reminisce on point B, it's with laughter and a mixture of awe and thankfulness that I wasn't killed. But even a flicker of recognition of point A literally makes me weak in my stomach.
+Nothing on earth will ever compare to the raw panic overload of point A.  I tried writing this post back when it actually occurred- but I couldn't bring myself to even briefly recollect the moment in order to spit out words.  Even a year later, it is not fun to reminisce on that moment.  Some of my worst nightmares end with me waking up in bed after that exact millisecond of too much freefall.
+
+It is thoroughly illogical, baseless, and really should not even compare to the following instance of assumed paralysis.  All I know is that when I reminisce on point B, it's with laughter and a mixture of awe and thankfulness that I wasn't killed. But even a flicker of recognition of point A literally makes me weak in my stomach.
 
 I don't cliff jump anymore.  I am back to doing everything in my power to preserving the family lineage of staying well alive, hopefully for many generations of Steffey to come.
 
